microservices/app-artists/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-artists
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: app-artists
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-artists
    spec:
      containers:
        - name: app-artists
          image: k3d-example-registry:5000/app-artists
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
