microservices/app-artists/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-artists
spec:
  selector:
    app.kubernetes.io/name: app-artists
  ports:
    - name: http
      port: 80
      targetPort: http
